# PrjPoli18

./: CMakeLists.txt  Makefile  README.md  main.c
lib/BST/: BST.h
lib/CLBST/: CLBST.h
lib/LBST/: LBST.h
lib/RandomMaker/: Random.h  RandomMaker.h
lib/prj/: BFS.h  CLBST_s.h  getparents.h  graph.h  stack.h
lib/timing/: Poli_prng.h  timing.h
src/BST/: BST.c
src/CLBST/: CLBST.c
src/LBST/: LBST.c
src/RandomMaker/: Random.c  RandomMaker.c
src/prj/: BFS.c  CLBST_s.c  getparents.c  graph.c  stack.c
src/timing/: Poli_prng.c  timing.c
test/PoliReqTime/: time.c
test/testBST/: BST.c  timingBST.c
test/testCLBST/: testCLBST.c  timingCLBST.c
test/testLBST/: LBST.c  main.c  timingLBST.c
test/testSol/: test_graph_correct.py
test/testentropy/: RandomTester.c
test/testentropy/entropy/: randtest.c
