cmake_minimum_required(VERSION 3.9)
project(PrjPoli18 C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-Ofast")
#set(CMAKE_C_FLAGS "-Dvalgrind_compliant")

add_executable(EntropyTest src/RandomMaker/RandomMaker.c lib/RandomMaker/RandomMaker.h src/RandomMaker/Random.c lib/RandomMaker/Random.h test/testentropy/RandomTester.c)
add_executable(BSTTest test/testBST/BST.c src/BST/BST.c lib/BST/BST.h)
add_executable(LBSTTest test/testLBST/LBST.c src/LBST/LBST.c lib/LBST/LBST.h)
add_executable(CLBSTTest lib/CLBST/CLBST.h test/testCLBST/testCLBST.c src/CLBST/CLBST.c src/RandomMaker/RandomMaker.c lib/RandomMaker/RandomMaker.h src/RandomMaker/Random.c lib/RandomMaker/Random.h)
add_executable(TimingCLBST test/testCLBST/timingCLBST.c lib/CLBST/CLBST.h src/CLBST/CLBST.c src/RandomMaker/RandomMaker.c lib/RandomMaker/RandomMaker.h src/RandomMaker/Random.c lib/RandomMaker/Random.h)
add_executable(TimingLBST src/LBST/LBST.c lib/LBST/LBST.h test/testLBST/timingLBST.c src/RandomMaker/RandomMaker.c lib/RandomMaker/RandomMaker.h src/RandomMaker/Random.c lib/RandomMaker/Random.h)
add_executable(TimingBST src/BST/BST.c lib/BST/BST.h test/testBST/timingBST.c src/RandomMaker/RandomMaker.c lib/RandomMaker/RandomMaker.h src/RandomMaker/Random.c lib/RandomMaker/Random.h)
add_executable(LBSTTestDot test/testLBST/main.c src/LBST/LBST.c lib/LBST/LBST.h)
add_executable(PrjPoli18 main.c lib/prj/CLBST_s.h src/prj/CLBST_s.c src/prj/getparents.c lib/prj/getparents.h lib/prj/graph.h src/prj/graph.c)
add_executable(PoliReqTime test/PoliReqTime/time.c lib/timing/Poli_prng.h src/timing/Poli_prng.c src/timing/timing.c lib/prj/CLBST_s.h src/prj/CLBST_s.c lib/timing/timing.h src/prj/getparents.c lib/prj/getparents.h lib/prj/graph.h src/prj/graph.c)
#add_executable(PoliReqTime test/PoliReqTime/time.c lib/timing/Poli_prng.h src/timing/Poli_prng.c src/timing/timing.c lib/CLBST/CLBST.h src/CLBST/CLBST.c lib/timing/timing.h)
target_link_libraries(PoliReqTime m)